style.css
* {
    margin: 0;
    padding: 0;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    overflow: hidden;

    background:
    radial-gradient(circle at top left, rgba(193, 122, 82, 0.4), transparent 30%),
    radial-gradient(circle at bottom right, rgba(139, 94, 60, 0.3), transparent 25%),
        #0D1117;
}

.label {
    color: #EDEAE5;
    font-family: "Fredoka", sans-serif;
    font-size: clamp(1.5rem, 3vw, 2rem);
    letter-spacing: 1.5px;
    opacity: 0.7;
    font-weight: 500;
}

.timer-container {
    border-bottom: 1px solid #D4D0C8;
}

#timer {
    font-family: 'Fredoka', sans-serif;
    color: #EDEAE5;
    letter-spacing: 2px;
    font-weight: 100;
    font-size: clamp(4rem, 15vw, 7rem);
    line-height: 1;
    margin-bottom: 2rem;
}

.time-choices {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    width: 100%;
}

.time {
    font-family: 'Fredoka', sans-serif;
    background: none;
    border: 1px solid #EDEAE5;
    color: #EDEAE5;
    flex: 1;
    max-width: 100;
    padding: 0.8rem;
    border-radius: 5px;
    font-size: clamp(0.8rem, 3vw, 1.0rem);
    font-weight: 500;
    letter-spacing: 2px;
    cursor: pointer;
    transition: transform 0.2s ease;
}

.time:hover {
    transform: scale(1.05);
}

.pomodoro-container {

    /* GLASS EFFECT */
    background-color: rgba(255, 255, 255, 0.08);
    backdrop-filter: blur(18px);
    -webkit-backdrop-filter: blur(18px);

    /* GLASS BORDER */
    border: 1px solid rgba(255, 255, 255, 0.15);

    /*SHADOW GLASS*/
    box-shadow: 
        0 8px 32px rgb(0, 0, 0, 0.25),
        inset 0 0 10px rgba(255, 255, 255, 0.03);

    overflow: hidden;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    width: min(90%, 500px);
    min-height: 300px;
    gap: 1rem;
    padding: 1.5rem 1rem;

    border-radius: 10px;
}

.button-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 15px;
    width: 100%;
}

.button-container button {
    flex: 1;
    max-width: 140px;
    padding: 0.8rem 1rem;
    border-radius: 5px;
    font-family: 'Fredoka', sans-serif;
    font-size: 1rem;
    color: #EDEAE5;
    /* background-color: #C17A52; */
    background: transparent;
    border: 1px solid #EDEAE5;
    cursor: pointer;
    letter-spacing: 2px;

    display: flex;
    justify-content: center;
    align-items: center;

    transition: transform 0.2s ease;
}

.button-container button:hover {
    transform: scale(1.1);
}

.hidden {
    display: none !important;
}

.start-hidden {
    display: none !important;
}

.session-info {
    font-family: 'Fredoka', sans-serif;
    color: #EDEAE5;
    font-size: 1rem;
    letter-spacing: 1.5px;
    opacity: 0.8;
    font-weight: 500;
}

.session-dots {
    display: flex;
    gap: 8px;
}

.dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background: rgba(230, 180, 30, 0.3);
}

.dot.done {
    background: #1C1917;
}

.dot.active {
    background: #C0392B;
    outline: 2px solid #42403b;
    outline-offset: 2px;
}

.header-con {
    font-size: clamp(0.8rem, 2vw, 1.3rem);
}

.modal-container {
    position: fixed;
    inset: 0;
    
    background: rgba(0,0,0,0.4);
    backdrop-filter: blur(4px);
    
    
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal-content {
    /* background: #0D1117; */

    background-color: rgba(255, 255, 255, 0.08);
    backdrop-filter: blur(18px);
    border: 1px solid rgba(255, 255, 255, 0.15);

    box-shadow: 
        0 8px 16px rgba(0, 0, 0, 0.5),
        inset 0 0 16px rgba(255, 255, 255, 0.205);


    color: #EDEAE5;
    font-size: clamp(0.6rem, 3vw, 1rem);
    font-family: 'Fredoka', sans-serif;
    gap: 10px;
    padding: 2rem 5rem;
    border-radius: 10px;
    /* box-shadow: 0 0 20px rgba(255, 255, 255, 0.357); */

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    letter-spacing: 1.5px;

    animation: popIn 1s ease;
}

.modal-content button {
    color: #EDEAE5;
    padding: clamp(0.4rem, 2vw, 0.7rem);
    border-radius: 5px;
    font-size: 1rem;
    font-family: 'Fredoka', sans-serif;
    letter-spacing: 2px;
    background-color: rgba(0, 0, 0, 0.35);
    border: 1px solid rgba(255, 255, 255, 0.3);
    box-shadow: 
    0 8px 16px rgba(187, 107, 32, 0.308),
    inset 0 0 16px rgba(187, 107, 32, 0.219);
    cursor: pointer;
    transition: transform 0.3s ease;
}


.modal-content button:hover {
    transform: scale(1.05);
}


@keyframes popIn {
    from {
        opacity: 0;
        transform: scale(0.7);
    }

    to {
        opacity: 1;
        transform: scale(1);
    }
}

@font-face {
    font-family: 'Cormorant Garamond';
    src: url(assets/fonts/Cormorant_Garamond/CormorantGaramond-VariableFont_wght.ttf);
}

@font-face {
    font-family: 'Fredoka';
    src: url(assets/fonts/Fredoka/Fredoka-VariableFont_wdth\,wght.ttf);
}

